# minicad

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.opencode/agent/: simple-coder.md
diagrams/: c4-container.md  sequence-shape-selection.md
doc/: operatinalstate.md
include/: Camera.hpp  CoordinateSystem.hpp  Mat4.hpp  Mesh.hpp  OpenGLRenderer.hpp  PixelCanvas.hpp  Vec3.hpp
include/langcad/api/: ApiServer.hpp  ShapeJson.hpp  StructuredLogger.hpp  Trace.hpp
include/langcad/core/: Mat4.hpp  Mesh.hpp  Vec3.hpp
include/langcad/editor/: EditorApp.hpp  EditorUi.hpp  TransformGizmo.hpp
include/langcad/geometry/: Cube.hpp  Cylinder.hpp  FacetedShape.hpp  OcctBox.hpp  OcctCylinder.hpp  OcctMeshConverter.hpp  OcctSphere.hpp  Pyramid.hpp  Shape3D.hpp  ShapeCatalog.hpp  ShapeDefinition.hpp  ShapeFactory.hpp  ShapeValidator.hpp  SkeletonDefinition.hpp  SkeletonResolver.hpp  Sphere.hpp
include/langcad/llm/: OllamaClient.hpp
include/langcad/render/: Camera.hpp  GpuMesh.hpp  OpenGLApi.hpp  Projector.hpp  Renderer.hpp  ShaderProgram.hpp
include/langcad/scene/: Scene.hpp
src/: Camera.cpp  CoordinateSystem.cpp  Mat4.cpp  Mesh.cpp  OpenGLRenderer.cpp  PixelCanvas.cpp  Vec3.cpp  api_main.cpp  main.cpp
src/api/: ApiServer.cpp  ShapeJson.cpp  StructuredLogger.cpp  Trace.cpp
src/core/: Mat4.cpp  Vec3.cpp
src/editor/: EditorApp.cpp  EditorUi.cpp  TransformGizmo.cpp
src/geometry/: Cube.cpp  Cylinder.cpp  FacetedShape.cpp  OcctBox.cpp  OcctCylinder.cpp  OcctMeshConverter.cpp  OcctSphere.cpp  Pyramid.cpp  ShapeCatalog.cpp  ShapeFactory.cpp  ShapeValidator.cpp  SkeletonResolver.cpp  Sphere.cpp
src/llm/: OllamaClient.cpp
src/render/: Camera.cpp  GpuMesh.cpp  OpenGLApi.cpp  Projector.cpp  Renderer.cpp  ShaderProgram.cpp
src/scene/: Scene.cpp
tests/: api_prompt_injection.sh
ui-test/: index.html
